[gd_scene load_steps=8 format=3 uid="uid://diryunrxqcygg"]

[ext_resource type="Script" path="res://Characters/Player.gd" id="1_1oro3"]
[ext_resource type="PackedScene" uid="uid://bmduvququx8kt" path="res://Characters/RatchetLiberatorNoHelmet/RatchetLiberatorNoHelmet.glb" id="1_c2vwa"]
[ext_resource type="PackedScene" uid="uid://df5ovt2ks4nt8" path="res://Scenes/Other/PauseMenu/PauseMenu.tscn" id="2_0t8qg"]
[ext_resource type="Script" path="res://Characters/PlayerCamera.gd" id="2_uwasm"]
[ext_resource type="PackedScene" uid="uid://plh5aii2ck1t" path="res://Scenes/Other/QuickSelect/QuickSelect.tscn" id="3_6ctt2"]
[ext_resource type="Script" path="res://Characters/Inventory.gd" id="4_5q0q3"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6uhk6"]
height = 1.65
radius = 0.3

[node name="Player" type="CharacterBody3D"]
floor_max_angle = 0.628319
script = ExtResource("1_1oro3")

[node name="GUI" type="Node3D" parent="."]

[node name="PauseMenu" parent="GUI" instance=ExtResource("2_0t8qg")]
visible = false

[node name="QuickSelect" parent="GUI" instance=ExtResource("3_6ctt2")]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.82588, 0)
shape = SubResource("CylinderShape3D_6uhk6")

[node name="Pivot" type="Node3D" parent="."]

[node name="RatchetLiberatorNoHelmet" parent="Pivot" instance=ExtResource("1_c2vwa")]
transform = Transform3D(0.053, 0, 0, 0, 0.053, 0, 0, 0, 0.053, 0, 0, 0)

[node name="EquippedItem" type="Node3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886261, 1.095, -0.0432902)

[node name="SpringArm3D" type="SpringArm3D" parent="."]
spring_length = 5.0
margin = 0.2
script = ExtResource("2_uwasm")

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
v_offset = 1.5
fov = 80.0

[node name="Inventory" type="Node3D" parent="."]
script = ExtResource("4_5q0q3")
